@@ -1,5 +1,9 @@
 package co.kurrant.app.client_api.service.impl;
 
+import co.dalicious.client.alarm.dto.PushRequestDtoByUser;
+import co.dalicious.client.alarm.entity.enums.AlarmType;
+import co.dalicious.client.alarm.service.PushService;
+import co.dalicious.client.alarm.util.PushUtil;
 import co.dalicious.domain.client.dto.*;
 import co.dalicious.domain.client.entity.Corporation;
 import co.dalicious.domain.client.entity.Employee;
@@ -12,7 +16,9 @@ import co.dalicious.domain.user.entity.ProviderEmail;
 import co.dalicious.domain.user.entity.User;
 import co.dalicious.domain.user.entity.UserGroup;
 import co.dalicious.domain.user.entity.enums.ClientStatus;
+import co.dalicious.domain.user.entity.enums.PushCondition;
 import co.dalicious.domain.user.repository.*;
+import co.dalicious.system.util.StringUtils;
 import co.kurrant.app.client_api.dto.MemberIdListDto;
 import co.kurrant.app.client_api.dto.DeleteWaitingMemberRequestDto;
 import co.kurrant.app.client_api.dto.MemberListResponseDto;
@@ -30,6 +36,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigInteger;
 import java.util.*;
 import java.util.function.Function;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 @Service
@@ -48,6 +55,8 @@ public class MemberServiceImpl implements MemberService {
     private final QProviderEmailRepository qProviderEmailRepository;
     private final UserGroupRepository userGroupRepository;
     private final UserUtil userUtil;
+    private final PushUtil pushUtil;
+    private final PushService pushService;
 
     @Override
     @Transactional
@@ -110,21 +119,25 @@ public class MemberServiceImpl implements MemberService {
     }
 
     @Override
+    @Transactional
     public void deleteMember(SecurityUser securityUser, MemberIdListDto deleteMemberRequestDto) {
         Corporation corporation = userUtil.getCorporation(securityUser);
-        //userId 리스트 가져오기
+
         List<BigInteger> userIdList = deleteMemberRequestDto.getUserIdList();
 
-        if (userIdList.size() == 0) throw new ApiException(ExceptionEnum.BAD_REQUEST);
+        if (userIdList.isEmpty()) {
+            throw new ApiException(ExceptionEnum.BAD_REQUEST);
+        }
 
-        for (BigInteger userId : userIdList) {
+        userIdList.forEach(userId -> {
             User deleteUser = qUserRepository.findByUserId(userId);
             EmployeeHistoryType type = EmployeeHistoryType.USER;
             EmployeeHistory employeeHistory = employeeHistoryMapper.toEntity(userId, deleteUser.getName(), deleteUser.getEmail(), deleteUser.getPhone(), type);
             employeeHistoryRepository.save(employeeHistory);
-            Long deleteResult = qUserGroupRepository.deleteMember(userId, corporation.getId());
-            if (deleteResult != 1) throw new ApiException(ExceptionEnum.USER_PATCH_ERROR);
-        }
+
+            qUserGroupRepository.findAllByUserIdAndGroupId(userId, corporation.getId())
+                    .forEach(userGroup -> userGroup.updateStatus(ClientStatus.WITHDRAWAL));
+        });
     }
 
     @Override
@@ -154,7 +167,9 @@ public class MemberServiceImpl implements MemberService {
 
         List<String> emails = dtoList.getSaveUserList().stream()
                 .map(ClientUserWaitingListSaveRequestDto::getEmail)
-                .toList();
+                .filter(Objects::nonNull)
+                .filter(Predicate.not(String::isEmpty))
+                .collect(Collectors.toList());
 
         // 삭제
         List<Employee> employees = employeeRepository.findAllByCorporation(corporation);
@@ -181,6 +196,7 @@ public class MemberServiceImpl implements MemberService {
                 .map(ProviderEmail::getEmail)
                 .collect(Collectors.toSet());
 
+        List<User> pushAlarmUserList = new ArrayList<>();
         if (!providerEmails.isEmpty()) {
             // 기존에 그룹에 포함된 인원인지 체크한다.
             for (ProviderEmail providerEmail : providerEmailMap.values()) {
@@ -198,10 +214,12 @@ public class MemberServiceImpl implements MemberService {
                             .clientStatus(ClientStatus.BELONG)
                             .build();
                     userGroupRepository.save(userGroup);
+                    pushAlarmUserList.add(user);
                 } else {
                     userGroups.stream()
                             .filter(ug -> ug.getGroup().equals(corporation))
                             .forEach(ug -> ug.updateStatus(ClientStatus.BELONG));
+                    pushAlarmUserList.add(user);
                 }
 
             }
@@ -225,13 +243,26 @@ public class MemberServiceImpl implements MemberService {
             if(email == null || email.isBlank()) throw new ApiException(ExceptionEnum.NOT_VALID_EMAIL);
 
             if (employee.isPresent()) {
+                email = email.replaceAll("\\s", "");
                 qEmployeeRepository.patchEmployee(employeeDto.getId(), phone, email, name);
             } else {
+                email = email.replaceAll("\\s", "");
                 Employee newEmployee = employeeMapper.toEntity(email, name, phone, corporation);
                 employeeRepository.save(newEmployee);
             }
         }
 
         // TODO: 프라이빗 스팟 초대 시 푸시알림 추가
+        if(!pushAlarmUserList.isEmpty()) {
+            List<PushRequestDtoByUser> pushRequestDtoByUsers = pushAlarmUserList.stream()
+                    .map(user -> {
+                        PushCondition pushCondition = PushCondition.NEW_SPOT;
+                        String message = pushUtil.getContextCorporationSpot(user.getName(), pushCondition);
+                        pushUtil.savePushAlarmHash(pushCondition.getTitle(), message, user.getId(), AlarmType.SPOT_NOTICE, null);
+                        return pushUtil.getPushRequest(user, pushCondition, message);
+                    }).toList();
+
+            pushService.sendToPush(pushRequestDtoByUsers);
+        }
     }
 }
